--- a/alire.toml
+++ b/alire.toml
@@ -6,7 +6,7 @@ authors = ["Vadim Godunko"]
 maintainers = ["Vadim Godunko <vgodunko@gmail.com>"]
 maintainers-logins = ["godunko"]
 licenses = "Apache-2.0 WITH LLVM-exception"
-tags = ["embedded", "timer"]
+tags = ["a0b", "embedded", "timer"]
 
 project-files = ["gnat/a0b_timer.gpr"]
 
