--- a/alire.toml
+++ b/alire.toml
@@ -1,6 +1,6 @@
 name = "a0b_timer"
 description = "A0B Timer"
-version = "0.1.0"
+version = "0.2.0-dev"
 
 authors = ["Vadim Godunko"]
 maintainers = ["Vadim Godunko <vgodunko@gmail.com>"]
